Corrections to BSTTest